k8s/db-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-ms
spec:
  selector:
    matchLabels:
      app: db-ms
  replicas: 2
  template:
    metadata:
      labels:
        app: db-ms
        version: v1
    spec:
      containers:
      - name: main
        image: wjma90/simple-db-ms:latest
        imagePullPolicy: Always
