k8s/api-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rest
spec:
  selector:
    matchLabels:
      app: api-rest
  replicas: 3
  template:
    metadata:
      labels:
        app: api-rest
        version: v1
    spec:
      serviceAccountName: api-rest
      containers:
      - name: main
        image: wjma90/simple-api-rest:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-rest
  labels:
    app: api-rest
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: api-rest
