k8s/ingress-k3s.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poc
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1
        backend:
          serviceName: api-rest
          servicePort: 80
